conformer_experiment_update

--- a/test/scalability.ipynb
+++ b/test/scalability.ipynb
@@ -23,7 +23,7 @@
     "from tqdm import tqdm\n",
     "import pickle\n",
     "\n",
-    "from data.data import QMugsTestDataloader, QMugsDataloader, QM9Dataloader"
+    "from data.data import QMugsTestDataloader"
    ]
   },
   {
@@ -67,6 +67,20 @@
     "parser.add_argument('--hidden-features', type=int, default=256, help=\"\")\n",
     "parser.add_argument('--output-features', type=int, default=1, help=\"\")\n",
     "args = parser.parse_args([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_list = ['GFN2:DIPOLE', 'GFN2:HOMO_LUMO_GAP', 'GFN2:TOTAL_FREE_ENERGY']\n",
+    "checkpoint_list = [\n",
+    "    './ckpts/qmugs_20_mmff_mu_lacl',\n",
+    "    './ckpts/qmugs_20_mmff_mu_source_finetune',\n",
+    "    './ckpts/qmugs_20_mmff_mu_target_finetune',\n",
+    "]"
    ]
   },
   {
